# GraphViso

./: .gitignore  CMakeLists.txt  README.md
include/algorithms/: dijkstra.hpp  traversal.hpp
include/core/: edge.hpp  graph.hpp  node.hpp
include/gui/: edge_item.hpp  graph_input_dialog.hpp  main_window.hpp  node_item.hpp
src/: CMakeLists.txt  main.cpp
src/algorithms/: dijkstra.cpp  traversal.cpp
src/core/: edge.cpp  graph.cpp  node.cpp
src/gui/: edge_item.cpp  graph_input_dialog.cpp  main_window.cpp  node_item.cpp
